--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,21 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/orange_bg">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/TopLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#FFFFFF"
+
         >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello , XXX"
-            android:fontFamily="@font/mkt"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="10dp"
@@ -31,7 +31,7 @@
         android:id="@+id/topDivider"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="#EDEDED"
+        android:background="#FEC5A7"
         app:layout_constraintTop_toBottomOf="@id/TopLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -40,7 +40,7 @@
         android:id="@+id/nav_host_fragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topDivider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_nav"/>
@@ -61,45 +61,152 @@
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_home"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottom_nav_1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/logo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_course"/>
+            app:layout_constraintEnd_toStartOf="@id/bottom_nav_2"
+            android:layout_marginTop="5dp">
 
-        <ImageView
-            android:id="@+id/iv_course"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            <ImageView
+                android:id="@+id/iv_home"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/practice_normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="练习"
+                app:layout_constraintTop_toBottomOf="@id/iv_home"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="12sp"
+                android:textColor="#A7A6B5"
+                android:textStyle="bold"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottom_nav_2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/logo"
-            app:layout_constraintStart_toEndOf="@id/iv_home"
-            app:layout_constraintEnd_toStartOf="@id/iv_ai"/>
+            app:layout_constraintStart_toEndOf="@id/bottom_nav_1"
+            app:layout_constraintEnd_toStartOf="@id/bottom_nav_3"
+            android:layout_marginTop="5dp">
 
-        <ImageView
-            android:id="@+id/iv_ai"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            <ImageView
+                android:id="@+id/iv_course"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/practice_normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_course"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="课程"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_course"
+                android:textSize="12sp"
+                android:textColor="#A7A6B5"
+                android:textStyle="bold"/>
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottom_nav_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/logo"
-            app:layout_constraintStart_toEndOf="@id/iv_course"
-            app:layout_constraintEnd_toStartOf="@id/iv_mine"/>
+            app:layout_constraintStart_toEndOf="@id/bottom_nav_2"
+            app:layout_constraintEnd_toStartOf="@id/bottom_nav_4"
+            android:layout_marginTop="5dp"
+            >
 
-        <ImageView
-            android:id="@+id/iv_mine"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            <ImageView
+                android:id="@+id/iv_ai"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/practice_normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_ai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AI问答"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_ai"
+                android:textSize="12sp"
+                android:textColor="#A7A6B5"
+                android:textStyle="bold"/>
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottom_nav_4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/logo"
-            app:layout_constraintStart_toEndOf="@id/iv_ai"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintStart_toEndOf="@id/bottom_nav_3"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="5dp">
+
+            <ImageView
+                android:id="@+id/iv_mine"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/mine_normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_mine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我的"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_mine"
+                android:textSize="12sp"
+                android:textColor="#A7A6B5"
+                android:textStyle="bold"/>
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
