--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.Information.InformationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_Post"
@@ -18,6 +18,16 @@
         app:layout_constraintStart_toStartOf="parent"
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <com.example.directorduck_v10.defItems.MyButton
+        android:id="@+id/Post_Button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/post"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="20dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
