--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -48,8 +48,6 @@
 
 
 
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.example.directorduck_v10.defItems.MyButton
@@ -82,34 +80,36 @@
             android:textSize="20sp"
             android:layout_marginStart="10sp"/>
 
-        <ImageView
+        <com.example.directorduck_v10.defItems.MyButton
             android:id="@+id/iv_answersheet"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/answersheet"
+            android:background="@drawable/answersheet"
             app:layout_constraintTop_toTopOf="@id/iv_clock"
             app:layout_constraintBottom_toBottomOf="@id/iv_clock"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="10dp"/>
 
-        <ImageView
+        <com.example.directorduck_v10.defItems.MyButton
             android:id="@+id/iv_pen"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/pen2"
+            android:background="@drawable/pen2"
             app:layout_constraintEnd_toStartOf="@id/iv_answersheet"
             app:layout_constraintTop_toTopOf="@id/iv_answersheet"
             app:layout_constraintBottom_toBottomOf="@id/iv_answersheet"
             android:layout_marginEnd="20dp"/>
 
-        <ImageView
+        <com.example.directorduck_v10.defItems.MyButton
+            android:id="@+id/iv_bookmark"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/bookmark"
+            android:background="@drawable/bookmark"
             app:layout_constraintEnd_toStartOf="@id/iv_pen"
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toTopOf="@id/iv_pen"
             app:layout_constraintBottom_toBottomOf="@id/iv_pen"/>
+
 
 
 
@@ -127,6 +127,61 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- 草稿蒙层：默认隐藏，显示时铺满全屏并拦截触摸 -->
+    <FrameLayout
+        android:id="@+id/draftOverlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.example.directorduck_v10.views.DraftView
+            android:id="@+id/draftView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!-- 简单工具栏（可按需删减） -->
+        <!-- 右侧竖排工具栏 -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_gravity="end|center_vertical"
+            android:padding="12dp">
+
+            <Button
+                android:id="@+id/btnDraftUndo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="撤销" />
+
+            <Button
+                android:id="@+id/btnDraftClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="清空"
+                android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/btnDraftClose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="关闭"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
+
+    </FrameLayout>
+
 
 
 
