--- a/app/src/main/res/layout/dialog_answer_sheet.xml
+++ b/app/src/main/res/layout/dialog_answer_sheet.xml
@@ -20,14 +20,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAnswerSheet"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:paddingTop="12dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintBottom_toTopOf="@id/btnSubmitPaper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:maxHeight="360dp"
-        />
-
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintHeight_max="360dp"/>
 
     <Button
         android:id="@+id/btnSubmitPaper"
