--- a/app/src/main/res/layout/item_course_category.xml
+++ b/app/src/main/res/layout/item_course_category.xml
@@ -3,9 +3,12 @@
     android:id="@+id/categoryName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="8dp"
-    android:padding="8dp"
+    android:layout_marginEnd="10dp"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="8dp"
     android:text="分类"
-    android:textColor="@android:color/black"
     android:textSize="14sp"
-    android:background="@drawable/default_background" />
+    android:textStyle="bold"
+    android:gravity="center"
+    android:textColor="@color/selector_category_text"
+    android:background="@drawable/selector_category_bg" />
