--- a/app/src/main/res/layout/item_chat_ai.xml
+++ b/app/src/main/res/layout/item_chat_ai.xml
@@ -22,6 +22,7 @@
         android:background="@drawable/bg_bubble_ai"
         android:textColor="@android:color/black"
         android:textSize="16sp"
+        android:lineSpacingExtra="2dp"
         android:padding="10dp" />
 
 </LinearLayout>
