--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -340,13 +340,13 @@
                 android:layout_height="56dp"
                 android:gravity="center_vertical"
                 android:text="退出登录"
-                android:textColor="#E53935"
+                android:textColor="#333333"
                 android:paddingStart="20dp"
                 android:textSize="15sp"
                 android:drawablePadding="16dp"
                 android:drawableStart="@android:drawable/ic_lock_power_off"
                 android:drawableEnd="@android:drawable/ic_media_play"
-                android:drawableTint="#E53935"
+                android:drawableTint="#757575"
                 android:paddingEnd="16dp"
                 android:clickable="true"
                 android:focusable="true"
