--- a/app/src/main/res/drawable/bg_compare_result_metric_wrong.xml
+++ b/app/src/main/res/drawable/bg_compare_result_metric_wrong.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="24dp" />
+    <solid android:color="#FFF4F4" />
+    <corners android:radius="14dp" />
     <stroke
         android:width="1dp"
-        android:color="#E5E7EB" />
+        android:color="#F7D2D2" />
 </shape>
