--- a/app/src/main/res/drawable/bg_compare_result_no_wrong.xml
+++ b/app/src/main/res/drawable/bg_compare_result_no_wrong.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="24dp" />
+    <solid android:color="#F1FFF6" />
+    <corners android:radius="10dp" />
     <stroke
         android:width="1dp"
-        android:color="#E5E7EB" />
+        android:color="#CBEFD8" />
 </shape>
