--- a/app/src/main/res/drawable/bg_send_button.xml
+++ b/app/src/main/res/drawable/bg_send_button.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#2196F3" />
-    <corners android:radius="18dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="false" android:drawable="@drawable/bg_send_button_disabled" />
+    <item android:state_pressed="true" android:drawable="@drawable/bg_send_button_pressed" />
+    <item android:drawable="@drawable/bg_send_button_enabled" />
+</selector>
